2010-09-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/gnutls.el (starttls-negotiate): Loop a lot longer.
	(starttls-negotiate): Just call boot, and let the handshake be
	triggered from the read loop.

2010-09-29  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries): Use temp buffers when
	not displaying the diary.
	(diary-add-to-list): If no buffer-file-name, fall back to diary-file.
	* calendar/appt.el (appt-check): No longer need to kill diary.

	* calendar/diary-lib.el (diary-list-entries): Move the
	"Preparing..." message entirely here.
	(diary-simple-display, diary-fancy-display): Move "Preparing..."
	messages to diary-list-entries.
	(diary-include-other-diary-files): Use LIST-ONLY rather than setting
	diary-display-function.

	* calendar/diary-lib.el (diary-include-other-diary-files):
	Trap some recursive includes.

	* calendar/appt.el (appt-activate): Check diary file.

2010-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pgg.el (pgg-run-at-time-1): Define it for XEmacs only; fix if/else
	construction.

	* calendar/time-date.el: No need to require cl for Emacs 21.

2010-09-28  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el (appt-check): Minor simplification.

2010-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mail/sendmail.el (mail-citation-prefix-regexp): Remove "}" from
	citation prefix.

2010-09-27  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/byte-opt.el (byte-optimize-form-code-walker):
	Avoid infinite recursion on erroneous lambda form.  (Bug#7114)

2010-09-27  Kenichi Handa  <handa@m17n.org>

	* tar-mode.el (tar-header-block-tokenize): Decode filenames in
	"ustar" format.

2010-09-27  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-coding-system): Docstring fixed.

	* international/mule-diag.el (describe-character-set): Use princ
	with proper print-length and print-level instead of insert.

2010-09-27  Juanma Barranquero  <lekktu@gmail.com>

	* window.el (walk-windows): Doc fix (bug#7105).
